# ocelli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ocelli.cabal
app/: Main.hs
docs/: ROADMAP.md
examples/: Clean.hs  FoldlThunk.hs  LazyRecord.hs  LazyState.hs
src/Ocelli/: Check.hs  Diagnostic.hs  FileDiscovery.hs  Render.hs
src/Ocelli/Rules/: Foldl.hs  LazyRecord.hs  LazyState.hs
